loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:2: error: illegal start of simple pattern
var case = 0
    ^Poucet1:24: error: '=' expected but '}' found.
	}
        ^