loopdowhile.Poucet1.scala.code
var baggles = 0
var case = 0

do {
  for (case <- 1 to 5) {
    
    avance();
    
    if (estSurBiscuit() == true) {
      baggles += 1;
    }
    
  }
  
  if (baggles <= 2) {
    droite();
  } else {
    gauche();
  }
  baggles = 0
  
} while (sortieTrouvee() != true)